update github action

--- a/.github/workflows/rdme-docs.yml
+++ b/.github/workflows/rdme-docs.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Run `docs` command 🚀
         uses: readmeio/rdme@v8
         with:
-          rdme: docs 1.md --key=${{ secrets.README_API_KEY }} --version=1.0
+          rdme: docs ./intro --key=${{ secrets.README_API_KEY }} --version=1.0
