--- a/.github/workflows/rdme-docs.yml
+++ b/.github/workflows/rdme-docs.yml
@@ -21,3 +21,9 @@ jobs:
         uses: readmeio/rdme@v8
         with:
           rdme: docs ./intro --key=${{ secrets.README_API_KEY }} --version=1.0
+
+      # base operations
+      - name: Update base operations 🚀
+        uses: readmeio/rdme@v8
+        with:
+          rdme: openapi ./api/1.yaml --key=${{ secrets.README_API_KEY }} --id=6583b80192293b001cfda05e --useSpecVersion
