--- a/.github/workflows/rdme-docs.yml
+++ b/.github/workflows/rdme-docs.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Update base operations 🚀
         uses: readmeio/rdme@v8
         with:
-          rdme: openapi ./api/1.yaml --key=${{ secrets.README_API_KEY }} --id=v2.1-user --useSpecVersion
+          rdme: openapi ./api/1.yaml --key=${{ secrets.README_API_KEY }} --id=6583d4447458e10038403742 --useSpecVersion
 
       # base operations
       - name: Update base operations 🚀
         uses: readmeio/rdme@v8
         with:
-          rdme: openapi ./api/2.yaml --key=${{ secrets.README_API_KEY }} --id=v2.1-user2 --useSpecVersion
+          rdme: openapi ./api/2.yaml --key=${{ secrets.README_API_KEY }} --id=6583d4447458e10038403743 --useSpecVersion
