--- a/api/1.yaml
+++ b/api/1.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: seafile_one_v1.0.0
+  title: seafile_one_v1.0.0_dev
   description: |-
     This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
     Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
