太坑了这个id

--- a/.github/workflows/rdme-docs.yml
+++ b/.github/workflows/rdme-docs.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Update base operations 🚀
         uses: readmeio/rdme@v8
         with:
-          rdme: openapi ./api/1.yaml --key=${{ secrets.README_API_KEY }} --id=6583e56a952f2900105a3f51 --useSpecVersion
+          rdme: openapi ./api/1.yaml --key=${{ secrets.README_API_KEY }}
 
       # base operations
       - name: Update base operations 🚀
         uses: readmeio/rdme@v8
         with:
-          rdme: openapi ./api/2.yaml --key=${{ secrets.README_API_KEY }} --id=6583e28477c3a1004ecbf189 --useSpecVersion
+          rdme: openapi ./api/2.yaml --key=${{ secrets.README_API_KEY }} --useSpecVersion
