--- a/api/school.yaml
+++ b/api/school.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: seafile_2
+  title: school
   description: |-
     This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
     Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
@@ -18,7 +18,7 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.1
+  version: 1.0.0
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
