--- a/api/repo-api-tokens.yaml
+++ b/api/repo-api-tokens.yaml
@@ -10,6 +10,7 @@ tags:
 paths:
   /api/v2.1/via-repo-token/sync-batch-move-item/:
     post:
+      summary: Sync Batch Move Item
       tags:
         - Via Repo Token
       description: Sync Batch Move Item
@@ -35,6 +36,7 @@ paths:
                 $ref: '#/components/schemas/ResponseSuccess'
   /api/v2.1/via-repo-token/sync-batch-copy-item/:
     post:
+      summary: Sync Batch Copy Item
       tags:
         - Via Repo Token
       description: Sync Batch Copy Item
@@ -60,6 +62,7 @@ paths:
                 $ref: '#/components/schemas/ResponseSuccess'
   /api/v2.1/via-repo-token/batch-delete-item/:
     delete:
+      summary: Batch delete Item
       tags:
         - Via Repo Token
       description: Batch delete Item
@@ -85,24 +88,25 @@ paths:
                 $ref: '#/components/schemas/ResponseSuccess'
   /api/v2.1/via-repo-token/file/?path={path}:
     post:
+      summary: rename file
       tags:
-          - Via Repo Token
+        - Via Repo Token
       description: Upload file
       parameters:
-          - name: Authorization
-            in: header
-            description: Token ********
-            required: true
-            schema:
-                type: string
-                default: Token ********
-          - name: path
-            in: path
-            description: path
-            required: true
-            schema:
+        - name: Authorization
+          in: header
+          description: Token ********
+          required: true
+          schema:
               type: string
-              default: /1.txt
+              default: Token ********
+        - name: path
+          in: path
+          description: path
+          required: true
+          schema:
+            type: string
+            default: /1.txt
       requestBody:
         content:
           application/json:
