--- a/api/quickstart.yaml
+++ b/api/quickstart.yaml
@@ -22,61 +22,14 @@ paths:
       responses:
         '200':
           description: OK
-  /api2/auth-token/:
-    post:
-      summary: obtain account token
-      tags:
-        - Account-Token
-      description: obtain account token with username and password
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AccountTokenRequestBody'
-      responses:
-        '200':
-          description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AccountTokenResponseBody'
-
-  /api/v2.1/repos/{repo_id}/repo-api-tokens/:
-    get:
-      summary: list repo api tokens
-      tags:
-        - Library-Token
-      description: list repo api tokens of a library
-      parameters:
-        - name: Authorization
-          in: header
-          description: Token ********
-          required: true
-          schema:
-            type: string
-            default: Token ********
-        - name: repo_id
-          in: path
-          description: repo id
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-
+                $ref: '#/components/schemas/ResponseSuccess'
 components:
   schemas:
-    AccountTokenRequestBody:
+    ResponseSuccess:
       type: object
       properties:
-        username:
-          type: string
-        password:
-          type: string
-    AccountTokenResponseBody:
-      type: object
-      properties:
-        token:
-          type: string
-
+        success:
+          type: boolean
